# RETICLE

./: .gitignore  AWS_MIGRATION_SUMMARY.md  AllGenes  CI_CD_SETUP_GUIDE.md  CLEAN_REBUILD.md  CONDA_TO_VENV_MIGRATION.md  DEPLOYMENT_STEPS.md  ENV_VARS_MIGRATION.md  GRAPH_EXPLORER.md  IMPLEMENTATION_SUMMARY.md  PGPASS_MIGRATION_COMPLETE.md  QUICKSTART_HPC_ETL.md  README.md  SETUP_SUMMARY.md  SLURM_SETUP_COMPLETE.md  WAREHOUSE_PIPELINE_GUIDE.md  package-lock.json  package.json  start-dev.bat
.github/: BRANCH_CONVENTIONS.md
api/: .coverage  .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  config.py  ecs-task-definition.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/models/: base.py  gene.py  query.py
api/routers/: auth.py  explorer.py  genes.py  query.py
api/services/: auth_service.py  db_service.py  explorer_context.py  explorer_gene.py  explorer_network.py  external_sources.py  mock_data_service.py
api/tests/: conftest.py  test_db_live.py  test_main.py
architecture/: 24-fastapi-api.drawio  24-fastapi-api.md  25-react-webapp.drawio  25-react-webapp.md  gene-list-parser-upgrade.drawio  gene-list-parser-upgrade.md
brainstorming/: RETICLE_Layer0_Roadmap.md  RETICLE_Layer1_Roadmap.md  RETICLE_Layer2_Roadmap.md  RETICLE_Layer3_Roadmap.md  RETICLE_Layer4_Roadmap.md  RETICLE_Layer5_Roadmap.md  RETICLE_Layer6_Roadmap.md
database/: README.md  WAREHOUSE_USAGE_GUIDE.md  drop_all_objects.py  etl_pipeline.sql  maintenance.py  maintenance_utilities.sql  run_migration.py
demo/: TESTING.md  eslint.config.js  package-lock.json  package.json  vite.config.js
design/: E2E_Design_vs_Code.md  E2E_Workflow.drawio  gene_relatedness_process.md  gene_relatedness_process_beta_aligned.md  reticle_beta.md  reticle_target.md
docs/: HPC_ETL_DESIGN.md  HPC_STAGING_LOADER.md  RETICLE_MVP.html  RETICLE_MVP_oseremen.html  SLURM_GUIDE.md  SPLIT_GPU_CPU_PIPELINE.md  SSO_AND_SECRETS.md
graph-api/: package-lock.json  package.json  server.js
graph-ui/: package-lock.json  package.json
orcs_build/: .gitignore  build_gene_docs.py  build_gene_dossier.py  csv_to_uploads.py  dossier_lib.py  dossier_render.py  jsonl_to_md.py  make_insight_brief.sh
prototype/: .env.example  README.md  requirements.txt
requirements/: requirement_analysis.md
(+248 files in other folders)
